--- a/views/views.xml
+++ b/views/views.xml
@@ -8,6 +8,19 @@
               <xpath expr="//notebook/page/field/tree/field[@name='price_unit']" position="after">
                     <field name="costo" />
               </xpath>
+                <xpath expr="//notebook/page[@name='other_info']/group/group/field[@name='fiscal_position_id']" position="after">
+                    <field name="bank" />
+              </xpath>
+             </field>
+        </record>
+       <record id="view_company_form_inherit" model="ir.ui.view">
+            <field name="name">view.company.form.add.text.field</field>
+            <field name="model">res.company</field>
+            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="arch" type="xml">
+              <xpath expr="//notebook/page/group/group/field[@name='phone']" position="before">
+                    <field name="vat_split" />
+              </xpath>
              </field>
         </record>
    
