--- a/views/views.xml
+++ b/views/views.xml
@@ -10,6 +10,7 @@
               </xpath>
                 <xpath expr="//notebook/page[@name='other_info']/group/group/field[@name='fiscal_position_id']" position="after">
                     <field name="bank" />
+                    <field name="clabe" />
               </xpath>
              </field>
         </record>
