ajuste de factura 2.1

--- a/reports/invoice_report.xml
+++ b/reports/invoice_report.xml
@@ -35,7 +35,7 @@
                                       <span t-if="o.company_emitter_id.partner_id.l10n_mx_street3"> No.Ext. <span t-field="o.company_emitter_id.partner_id.l10n_mx_street3"/></span>
                                       <span t-if="o.company_emitter_id.partner_id.l10n_mx_street4"> No.Int. <span t-field="o.company_emitter_id.partner_id.l10n_mx_street4"/></span>
                                       <span t-field="o.company_emitter_id.colonia_sat_id.name"/>
-                                      <span t-field="o.company_emitter_id.partner_id.zip_sat_id.code"/>
+                                     CP. <span t-field="o.company_emitter_id.partner_id.zip_sat_id.code"/>
                                   </td>
                               </tr>
                               <tr>
@@ -57,7 +57,7 @@
                               </tr>
                               <tr>
                                 <td style="font-family:Arial, sans-serif;font-size:10pt; color:#4B0082; text-align:center;">
-                                    <span t-field="o.company_emitter_id.partner_id.regimen_fiscal_id.name"/>
+                                   [<span t-field="o.company_emitter_id.partner_id.regimen_fiscal_id.code"/>] <span t-field="o.company_emitter_id.partner_id.regimen_fiscal_id.name"/>
                                 </td>
                               </tr>
                               <tr>
@@ -263,6 +263,7 @@
                         <th style="width:15%;text-align:center;">Código</th>
                         <th style="width:15%;text-align:center;">Código SAT</th>
                         <th style="width:10%;" class="text-right">Cantidad</th>
+                        <th style="width:10%;text-align:center;">Clave <br/>UM</th>
                         <th style="width:10%;text-align:center;">Unidad </th>
                         <th style="width:40%;text-align:center;">Descripción</th>
                         <th style="width:12%;" class="text-right">P. Unitario   </th>
@@ -276,7 +277,8 @@
                             <span t-raw="'%s &lt;br&gt;' % l.product_id and l.product_id.sat_product_id.code or ''"/>
                         </td>
                         <td class="text-right"><span t-field="l.quantity"/></td>
-                        <td style="text-align:center;">[<span t-field="l.uom_id.sat_uom_id.code"/>] <span t-field="l.uom_id.sat_uom_id.name"/></td>
+                        <td style="text-align:center;"><span t-field="l.uom_id.sat_uom_id.code"/></td>
+                        <td style="text-align:center;"><span t-field="l.uom_id.sat_uom_id.name"/></td>
                         <td><!--<span t-field="l.name"/>-->
                             <span t-raw="'%s &lt;br&gt;' % l.name if l.name.find('] ') &lt; 0 else l.name[l.name.find('] ')+2:]"/>
                         </td>
@@ -418,43 +420,43 @@
 
             <table style=" border:1px solid gray; width:100%;" >
                   <tr>
-                      <td style="width:70%;font-family:Arial, sans-serif;font-size:9pt; text-align:center;">
+                      <td style="width:70%;font-family:Arial, sans-serif;font-size:7pt; text-align:center;">
                           <table style=" border:0px solid white; width:100%;" >
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt; ">
                                     <b>Sello Digital Emisor</b>
                                   </td>
                               </tr>
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt;">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt;">
                                     <span t-field="o.sello" style="display:block;width:500px;word-wrap:break-word;"/>
                                   </td>
                               </tr>
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt; ">
                                     <b>Sello Digital SAT</b>
                                   </td>
                               </tr>
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt; ">
                                     <span t-field="o.cfdi_sello" style="display:block;width:500px;word-wrap:break-word;"/>
                                   </td>
                               </tr>
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt; ">
                                     <b>Cadena Original:</b>
                                   </td>
                               </tr>
                               <tr>
-                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:9pt; ">
+                                  <td style="width:100%;font-family:Arial, sans-serif;font-size:7pt; ">
                                     <span t-field="o.cfdi_cadena_original" style="display:block;width:500px;word-wrap:break-word;"/>
                                   </td>
                               </tr>
 
                         </table>
                       </td>
-                      <td style="width:30%;font-family:Arial, sans-serif;font-size:9pt; text-align:center;">
-                        <img t-if="o.cfdi_cbb" t-att-src="'data:image/png;base64,%s' % o.cfdi_cbb" style="width:5.5cm;height:5.5cm;"/>
+                      <td style="width:30%;font-family:Arial, sans-serif;font-size:97t; text-align:center;">
+                        <img t-if="o.cfdi_cbb" t-att-src="'data:image/png;base64,%s' % o.cfdi_cbb" style="width:5cm;height:5cm;"/>
                       </td>
                   </tr>
 
