--- a/reports/invoice_report.xml
+++ b/reports/invoice_report.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0"?>
 <odoo>
-
-
     <template id="account.report_invoice">
         <t t-call="interkey.extend_layout_inter">
             <t t-foreach="docs" t-as="o">
             <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})"/>
             <div class="page" >
-
                 <t t-if="not o and doc">
                     <t t-set="o" t-value="doc"/>
                 </t>
@@ -99,32 +96,63 @@
                     </tr>
                 </table>
 
+                <table border="0" cellspacing="0" width="105%"><colgroup span="18" width="48"></colgroup> <colgroup width="51"></colgroup> <colgroup width="48"></colgroup>
+                <tbody>
+                  <tr>
+                    <td style="border-top: 1px solid #000000; border-left: 1px solid #000000; width: 537.45px;" colspan="15" align="left" valign="middle" height="18"><span style="color: #000000; font-family: Arial;">Cliente: </span><span t-raw="'%s &lt;br&gt;' % o.partner_id.parent_id.name if o.partner_id.parent_id else o.partner_id.name"/></td>
+                    <td style="border-top: 1px solid #000000; border-right: 1px solid #000000; width: 151.817px;" colspan="4" align="left" valign="middle"><strong><span style="color: #000000; font-family: Arial;">RFC: </span></strong><span t-raw="'%s &lt;br&gt;' % o.partner_id.parent_id.vat_split if o.partner_id.parent_id else o.partner_id.vat_split"/></td>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                  <tr>
+                    <td style="border-left: 1px solid #000000; width: 320.1px;" colspan="9" align="left" valign="middle" height="18"><span style="color: #000000; font-family: Arial;">Domicilio: </span><span t-field="o.partner_id.street"/></td>
+                    <td style="width: 108.85px;" colspan="3" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">N. Ext: </span><span t-field="o.partner_id.l10n_mx_street3"/></td>
+                    <td style="width: 108.5px;" colspan="3" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">N. Int: </span><span t-field="o.partner_id.l10n_mx_street4"/></td>
+                    <td style="border-right: 1px solid #000000; width: 151.817px;" colspan="4" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">C.P.: </span><span t-field="o.partner_id.zip_sat_id.code"/></td>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                  <tr>
+                    <td style="border-bottom: 1px solid #000000; border-left: 1px solid #000000; width: 320.1px;" colspan="9" align="left" valign="middle" height="18"><span style="color: #000000; font-family: Arial;">Colonia: </span><span t-field="o.partner_id.colonia_sat_id.name"/></td>
+                    <td style="border-bottom: 1px solid #000000; width: 217.35px;" colspan="6" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">Ciudad: </span>
+                                                 <span t-field="o.partner_id.township_sat_id.name"/>
+                                                 <span t-field="o.partner_id.state_id.name"/>,
+                                                 <span t-field="o.partner_id.country_id.name"/></td>
+                    <td style="border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 151.817px;" colspan="4" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">Tel: </span><span t-field="o.partner_id.phone"/></td>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                  <tr>
+                    <td style="border-top: 1px solid #000000; border-left: 1px solid #000000; width: 537.45px;" colspan="15" rowspan="2" align="left" valign="middle" height="37"><span style="color: #000000; font-family: Arial;">Direccion de Entrega: </span><span t-field="o.partner_id.name"/></td>
+                    <td style="border-right: 1px solid #000000; width: 151.817px;" colspan="4" rowspan="2" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">Zona: </span></td>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                  <tr>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                  <tr>
+                    <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: 1px solid #000000; width: 500.683px;" colspan="14" align="left" valign="middle" height="18"><span style="color: #000000; font-family: Arial;">Observaciones: <br /></span></td>
+                    <td style="border: 1px solid #000000; width: 188.583px;" colspan="5" align="left" valign="middle"><span style="color: #000000; font-family: Arial;">Ejecutivo: </span><span t-field="o.user_id.name"/></td>
+                    <td style="width: 37.7333px;" align="left" valign="bottom"><span style="color: #000000; font-family: Arial;"></span></td>
+                  </tr>
+                </tbody>
+              </table>
 
-
-                <table style=" border:0px solid white; width:100%; " >
+               <!-- <table style=" border:0px solid white; width:100%; ">
                   <tr>
                       <td style="width:80%;border-top:3px solid black; border-left:1px solid black">
-                         <table style=" border:0px solid white; width:100%; " >
+                         <table style=" border:0px solid white; width:100%; ">
                             <tr>
                                 <td style="width:100%;">
-                                    <table style=" border:0px solid white; width:100%;" >
+                                    <table style=" border:0px solid white; width:100%;">
                                         <tr style=" border-bottom:1px solid black">
-                                            <td style="width:10%;  border-bottom:1px solid black;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
-                                                <strong>No. Cliente: </strong>
+                                            <td style="width:5%; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
+                                                <strong>Cliente: </strong>
                                             </td>
-                                            <td style="width:20%; height:10px; border-bottom:1px solid black; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
-                                                <span t-field="o.partner_id.ref" />
-                                            </td>
-                                              <td style="width:10%; border-bottom:1px solid black;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
-                                                <strong>Receptor: </strong>
-                                            </td>
-                                            <td style="width:30%; border-bottom:1px solid black;height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:30%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <span t-raw="'%s &lt;br&gt;' % o.partner_id.parent_id.name if o.partner_id.parent_id else o.partner_id.name"/>
                                             </td>
-                                            <td style="width:10%;border-bottom:1px solid black; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:10%; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <strong>R.F.C: </strong>
                                             </td>
-                                            <td style="width:20%;border-bottom:1px solid black; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:20%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
                                                <span t-raw="'%s &lt;br&gt;' % o.partner_id.parent_id.vat_split if o.partner_id.parent_id else o.partner_id.vat_split"/>
                                             </td>
                                         </tr>
@@ -136,22 +164,22 @@
                                 <td style="width:100%;border-bottom:1px solid black;">
                                     <table style=" border:0px solid white; width:100%;" >
                                         <tr>
-                                          <td style="width:10%; border-bottom:1px solid black;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                          <td style="width:10%; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <strong>Calle: </strong>
                                             </td>
-                                            <td style="width:50%;border-bottom:1px solid black; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:50%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <span t-field="o.partner_id.street"/>
                                             </td>
-                                            <td style="width:10%; border-bottom:1px solid black;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:10%; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <strong>No. Ext: </strong>
                                             </td>
-                                            <td style="width:10%;border-bottom:1px solid black; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:10%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; ">
                                                 <span t-field="o.partner_id.l10n_mx_street3"/>
                                             </td>
-                                            <td style="width:10%; border-bottom:1px solid black;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:10%; font-family:Arial, sans-serif;font-size:9pt; text-align:left;">
                                                 <strong>No. Int: </strong>
                                             </td>
-                                            <td style="width:10%; border-bottom:1px solid black;height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                            <td style="width:10%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
                                                 <span t-field="o.partner_id.l10n_mx_street4"/>
                                             </td>
                                         </tr>
@@ -191,6 +219,15 @@
                                                  <span t-field="o.partner_id.country_id.name"/>
                                             </td>
                                         </tr>
+                                        <tr>
+                                           <td style="width:10%;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                                <strong>Zona: </strong>
+                                            </td>
+                                            <td style="width:90%; height:10px; font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid black;">
+                                                 <span t-field="o.partner_id.zone"/>
+                                            </td>
+                                        </tr>
+
                                     </table>
                                 </td>
                             </tr>
@@ -255,6 +292,7 @@
                   </tr>
                 </table>
 
+-->
 
 
                 <table class="table table-condensed" >
@@ -263,7 +301,6 @@
                         <th style="width:15%;text-align:center;">Código</th>
                         <th style="width:15%;text-align:center;">Código SAT</th>
                         <th style="width:10%;" class="text-right">Cantidad</th>
-                        <th style="width:10%;text-align:center;">Clave <br/>UM</th>
                         <th style="width:10%;text-align:center;">Unidad </th>
                         <th style="width:40%;text-align:center;">Descripción</th>
                         <th style="width:12%;" class="text-right">P. Unitario   </th>
@@ -277,7 +314,6 @@
                             <span t-raw="'%s &lt;br&gt;' % l.product_id and l.product_id.sat_product_id.code or ''"/>
                         </td>
                         <td class="text-right"><span t-field="l.quantity"/></td>
-                        <td style="text-align:center;"><span t-field="l.uom_id.sat_uom_id.code"/></td>
                         <td style="text-align:center;"><span t-field="l.uom_id.sat_uom_id.name"/></td>
                         <td><!--<span t-field="l.name"/>-->
                             <span t-raw="'%s &lt;br&gt;' % l.name if l.name.find('] ') &lt; 0 else l.name[l.name.find('] ')+2:]"/>
@@ -292,7 +328,7 @@
 
             <div class="row" style="font-family:Arial, sans-serif;font-size:10pt; ">
                 <div class="col-xs-4">
-                    <span t-field="o.comment"/>
+                    <span />
                 </div>
                 <div class="col-xs-4 pull-right">
                     <table class="table" >
@@ -321,12 +357,7 @@
 
             <table style=" border:0px solid white; width:100%;" >
                   <tr>
-                      <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt; font-style:italic; text-align:left;">
-                            IMPORTE CON LETRA:
-                      </td>
-                      <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt;font-style:italic;  text-align:center;">
-                        <span t-field="o.amount_to_text"/>
-                      </td>
+                      <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt; font-style:italic; text-align:left;">Total con letra: <span t-field="o.amount_to_text"/></td>
                       <td style="width:34%;font-family:Arial, sans-serif;font-size:9pt; text-align:center;">
 
                       </td>
@@ -341,20 +372,10 @@
 
                       </td>
                   </tr>
-                 <tr>
-                      <td style="width:50%;font-family:Arial, sans-serif;font-size:9pt; font-style:italic; ">
-                           "Este documento es una representación impresa de una CFDI"<br/>
-                         <b>CFDI Versión 3.3</b>, Comprobante Fiscal Digital por Internet
-                      </td>
-                      <td style="width:50%;font-family:Arial, sans-serif;font-size:9pt;font-style:italic;  ">
-                          <br/>Datos bancarios <span t-field="o.company_emitter_id.partner_id.name"/>
-                      </td>
-
-                  </tr>
 
                 </table>
 
-                <table style=" border:0px solid white; width:100%;" >
+           <!--     <table style=" border:0px solid white; width:100%;" >
                   <tr style=" background:#d3d3d3 ;">
                       <td style="width:25%;font-family:Arial, border-left:1px solid gray; sans-serif;font-size:9pt; text-align:center;border-bottom:1px solid gray; border-right:1px solid gray;">Banco/Moneda</td>
                       <td style="width:25%;font-family:Arial, sans-serif;font-size:9pt; text-align:center;border-bottom:1px solid gray; border-right:1px solid gray;">Número de Cuenta</td>
@@ -375,9 +396,21 @@
                         </td>
                   </tr>
                 </table>
-                 <table style=" border:1px solid gray; width:100%; " >
+              -->
+
+                 <table style=" border:1px solid gray; width:100%;" >
                   <tr>
-                      <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt; text-align:center; border-right:1px solid gray">
+                    <td colspan="3" style="width:33%;border-top:1px solid gray;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid gray;">
+                    <span>Datos bancarios para realizar pagos, indicar en referencia el número de factura.</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="width:33%;border-top:1px solid gray;font-family:Arial, sans-serif;font-size:9pt; text-align:left; border-right:1px solid gray; border-bottom:1px solid gray">
+                      <span>Banco: </span><span t-field="o.banco"/><span> Número de Cuenta: </span><span t-field="o.bank"/><span> CLABE: </span><span t-field="o.clabe"/><span> Referencia: </span><span t-field="o.number"/>
+                    </td>
+                  </tr>
+                  <tr>
+                      <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt; text-align:center; border-right:1px solid gray, border-bottom:1px solid gray">
                         <b>Certificado del SAT</b><br/><span t-field="o.cfdi_no_certificado"/>
                       </td>
                       <td style="width:33%;font-family:Arial, sans-serif;font-size:9pt; text-align:center; border-right:1px solid gray">
